--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,7 +8,7 @@ on:
   push:
   schedule:
     # 07:05 everyday in UTC+8, 23:05 everyday in UTC+0
-  - cron: '05 23 * * *'
+  - cron: '05 16 * * *'
 
 jobs:
   build:
@@ -30,7 +30,10 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Run app
         env:
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
+          mxl_username: ${{ secrets.MXL_USERNAME }}
+          mxl_password: ${{ secrets.MXL_PASSWORD }}
+          ljt_username: ${{ secrets.LJT_USERNAME }}
+          ljt_password: ${{ secrets.LJT_PASSWORD }}
         run: |
-          python3 auto.py --username=$username --password=$password
+          python3 auto.py --username=$mxl_username --password=$mxl_password
+          python3 auto.py --username=$ljt_username --password=$ljt_password
