添加ZSW打卡信息

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,6 +34,9 @@ jobs:
           mxl_password: ${{ secrets.MXL_PASSWORD }}
           ljt_username: ${{ secrets.LJT_USERNAME }}
           ljt_password: ${{ secrets.LJT_PASSWORD }}
+          zsw_username: ${{ secrets.ZSW_USERNAME }}
+          zsw_password: ${{ secrets.ZSW_PASSWORD }}
         run: |
           python3 auto.py --username=$mxl_username --password=$mxl_password
           python3 auto.py --username=$ljt_username --password=$ljt_password
+          python3 auto.py --username=$zsw_username --password=$zsw_password
