--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,13 +30,7 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Run app
         env:
-          mxl_username: ${{ secrets.MXL_USERNAME }}
-          mxl_password: ${{ secrets.MXL_PASSWORD }}
-          ljt_username: ${{ secrets.LJT_USERNAME }}
-          ljt_password: ${{ secrets.LJT_PASSWORD }}
-          zsw_username: ${{ secrets.ZSW_USERNAME }}
-          zsw_password: ${{ secrets.ZSW_PASSWORD }}
+          wz_username: ${{ secrets.WZ_USERNAME }}
+          wz_password: ${{ secrets.WZ_PASSWORD }}
         run: |
-          python3 auto.py --username=$mxl_username --password=$mxl_password
-          python3 auto.py --username=$ljt_username --password=$ljt_password
-          python3 auto.py --username=$zsw_username --password=$zsw_password
+          python3 auto.py --username=$wz_username --password=$wz_password
